[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Dialogue.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/VisualNovel/ColorRect.gd" type="Script" id=2]
[ext_resource path="res://UI/VisualNovel/VisualNovel.gd" type="Script" id=5]

[node name="VisualNovel" type="Control"]
script = ExtResource( 5 )

[node name="VNDialogue" type="Node" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
expand = true
script = ExtResource( 2 )

[node name="Dialogue" parent="." instance=ExtResource( 1 )]

[node name="Dialogue2" parent="." instance=ExtResource( 1 )]

[node name="1" type="Position2D" parent="."]
position = Vector2( 44, 89 )

[node name="Sprite1" type="Sprite" parent="1"]
scale = Vector2( 1.5, 1.5 )

[node name="2" type="Position2D" parent="."]
position = Vector2( 278, 89 )

[node name="Sprite2" type="Sprite" parent="2"]
scale = Vector2( 1.5, 1.5 )
flip_h = true

[node name="3" type="Position2D" parent="."]
position = Vector2( 98, 89 )

[node name="Sprite3" type="Sprite" parent="3"]
scale = Vector2( 1.5, 1.5 )

[node name="4" type="Position2D" parent="."]
position = Vector2( 223, 89 )

[node name="Sprite4" type="Sprite" parent="4"]
scale = Vector2( 1.5, 1.5 )
flip_h = true
